--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "body_parser": "^2.3.4",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "express-session": "^1.15.0",
     "formidable": "^1.0.17",
     "gm": "^1.23.0",
+    "mongodb": "^2.2.22",
     "silly-datetime": "^0.1.2"
   },
   "devDependencies": {},
